# sphinx-lumina-theme

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  customization.html  customization.html.md  extensions.html  extensions.html.md  genindex.html  getting-started.html  getting-started.html.md  http-routingtable.html  index.html  introduction.html  introduction.html.md  jsdoc.json  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  py-modindex.html  pyproject.toml  releases.html  releases.html.md  search.html  searchindex.js  troubleshooting.html
.doctrees/: environment.pickle  extensions.doctree  getting-started.doctree  introduction.doctree  releases.doctree
.github/: dependabot.yml
_pagefind/: pagefind-entry.json  pagefind.en_21f52ed480.pf_meta  pagefind.en_3188de5022.pf_meta  pagefind.en_3424e77c59.pf_meta  pagefind.en_3a72782687.pf_meta  pagefind.en_45f8d35bb1.pf_meta  pagefind.en_6a3b140efa.pf_meta  pagefind.en_74acd41bc7.pf_meta  pagefind.en_7c3bbe8b3b.pf_meta  pagefind.en_7f52505de7.pf_meta  pagefind.en_8046c92312.pf_meta  pagefind.en_829363fb67.pf_meta  pagefind.en_86f286e642.pf_meta  pagefind.en_924fb6d32a.pf_meta  pagefind.en_936a5bf37c.pf_meta  pagefind.en_97d1d46282.pf_meta  pagefind.en_9ac742ea1c.pf_meta  pagefind.en_a68668926b.pf_meta  pagefind.en_ce10c98ff7.pf_meta  pagefind.en_edd2935363.pf_meta  pagefind.en_f5e837718b.pf_meta  pagefind.en_f679351ed9.pf_meta
_sources/: introduction.md.txt
_static/: fluid-worker.js  lumina.css  lumina.js
contributing/: architecture.html  architecture.html.md  index.html  index.html.md  javascript-api.html  javascript-api.html.md
docs/: conf.py  extensions.md  getting-started.md  troubleshooting.md
extensions/: index.html  mathjax.html  mermaid.html  myst-parser.html  openapi.html  sphinx-copybutton.html  sphinx-design.html  sphinx-js.html  sphinx-last-updated-by-git.html  sphinx-llm.html  sphinx-llm.html.md
getting-started/: configuration.html  configuration.html.md  index.html  installation.html  installation.html.md
guides/: custom-styling.html  dark-mode.html  development-workflow.html  icons.html  index.html  index.html.md  landing-page.html  myst-markdown.html  navigation.html  search.html  wide-layout.html
pr-1/: .buildinfo  customization.html  index.html  objects.inv
pr-10/: customization.html  extensions.html  genindex.html  getting-started.html  index.html  introduction.html  py-modindex.html  releases.html  search.html  searchindex.js  troubleshooting.html
pr-104/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  py-modindex.html  releases.html  robots.txt  search.html  sitemap.xml
pr-105/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  llms.txt  py-modindex.html  releases.html  robots.txt  search.html  sitemap.xml
pr-106/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  py-modindex.html  releases.html  robots.txt  search.html  sitemap.xml
pr-107/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  llms-full.txt  objects.inv  py-modindex.html  releases.html  robots.txt  search.html  sitemap.xml
pr-109/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  introduction.html.md  llms-full.txt  py-modindex.html  releases.html  robots.txt  search.html  sitemap.xml
pr-110/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  py-modindex.html  releases.html  robots.txt  search.html  searchindex.js  sitemap.xml
pr-111/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  llms.txt  py-modindex.html  releases.html  releases.html.md  robots.txt  search.html  sitemap.xml
pr-14/: customization.html  extensions.html  genindex.html  getting-started.html  index.html  introduction.html  py-modindex.html  releases.html  search.html  searchindex.js
pr-17/: customization.html  extensions.html  genindex.html  getting-started.html  index.html  introduction.html  py-modindex.html  releases.html  search.html  searchindex.js
pr-19/: customization.html  extensions.html  genindex.html  getting-started.html  index.html  introduction.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
pr-2/: genindex.html  getting-started.html  introduction.html  search.html  troubleshooting.html
pr-20/: .buildinfo  customization.html  extensions.html  genindex.html  getting-started.html  http-routingtable.html  index.html  introduction.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
pr-22/: genindex.html  http-routingtable.html  index.html  introduction.html  llms-full.txt  llms.txt  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
pr-23/: genindex.html  http-routingtable.html  index.html  introduction.html  llms-full.txt  llms.txt  py-modindex.html  releases.html  releases.html.md  search.html  searchindex.js
pr-26/: .buildinfo  genindex.html  http-routingtable.html  index.html  introduction.html  llms-full.txt  llms.txt  objects.inv  py-modindex.html  releases.html  releases.html.md  search.html  searchindex.js
pr-28/: genindex.html  http-routingtable.html  index.html  introduction.html  llms-full.txt  llms.txt  py-modindex.html  releases.html  releases.html.md  search.html  searchindex.js
(+2954 files in other folders)
