[project]
name = "sphinx-lumina-theme"
version = "1.33.0"
description = "A modern Sphinx documentation theme with Tailwind CSS and Alpine.js"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Ralph Offinger", email = "ralph.offinger@gmail.com" },
]
keywords = ["sphinx", "theme", "documentation", "tailwindcss", "alpinejs", "dark-mode"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=8.0",
]

[project.urls]
Homepage = "https://r4sky0.github.io/sphinx-lumina-theme/"
Documentation = "https://r4sky0.github.io/sphinx-lumina-theme/"
Repository = "https://github.com/r4sky0/sphinx-lumina-theme"
Changelog = "https://github.com/r4sky0/sphinx-lumina-theme/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/r4sky0/sphinx-lumina-theme/issues"

[project.entry-points."sphinx.html_themes"]
lumina = "sphinx_lumina_theme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build]
artifacts = ["src/sphinx_lumina_theme/theme/static/lumina.css", "src/sphinx_lumina_theme/theme/static/lumina.js", "src/sphinx_lumina_theme/_icons.py"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".husky/",
    ".impeccable.md",
    ".nvmrc",
    ".python-version",
    "CHANGELOG.md",
    "CLAUDE.md",
    "commitlint.config.js",
    "docs/",
    "docs/assets/banner.png",
    "scripts/record-demo.py",
    "snapshot-light.md",
    "templates/",
    "tests/",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_lumina_theme"]

[tool.djlint]
profile = "jinja"
indent = 4
max_line_length = 120
blank_line_after_tag = "block,endblock,extends,include"
blank_line_before_tag = "block,endblock,extends,include"
preserve_blank_lines = true
format_css = false
format_js = false
ignore = "H006,H021,H023"
use_gitignore = true

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/sphinx_lumina_theme/__init__.py:__version__"]
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
insertion_flag = "<!-- releases -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"


[dependency-groups]
dev = [
    "pytest>=8.0",
    "beautifulsoup4>=4.12",
    "myst-parser>=4.0",
    "sphinx-design>=0.6",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-mermaid>=1.0",
    "sphinxcontrib-openapi>=0.8",
    "sphinxcontrib-httpdomain>=2.0",
    "sphinx-last-updated-by-git>=0.3",
    "sphinx-autobuild>=2024.0",
    "ruff>=0.11",
    "djlint>=1.36",
    "pytest-playwright>=0.6",
    "sphinx-llm>=0.4.1",
    "sphinx-js>=4.0",
]
